--- a/index.css
+++ b/index.css
@@ -149,6 +149,7 @@ footer nav a:hover {
 footer .footer-content .copyright {
   padding: 20px 0;
    /*======= metni ortalayacak kodu yazın */
+  text-align: center;
 }
 
 nav {
@@ -199,4 +200,12 @@ nav {
 .contact-section ul {
   padding: 0; 
   list-style-type:none
+}
+
+footer .container .title {
+  padding: 0 0 15px 15px;
+}
+
+footer nav {
+  padding: 0 0 15px 15px;
 }
